--- a/BLDC_pos_loop/CMakeLists.txt
+++ b/BLDC_pos_loop/CMakeLists.txt
@@ -3,4 +3,4 @@ project(BLDC_pos_loop)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(BLDC_pos_loop main.cpp SerialPort.h SerialPort.cpp)
+add_executable(BLDC_pos_loop main.cpp SerialPort.h SerialPort.cpp MiniPID.h MiniPID.cpp)
